--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -30,7 +30,7 @@
             Register
           </h2>
           <div class="row">              
-            <div class="col-md-12 mb-2">
+            <div class="col-md-12 mb-2 mt-3">
               <label for="code" class="sr-only">Registration Code</label>              
               <input type="text" class="form-control" name="code" placeholder="Registration Code" required autofocus>
             </div>
@@ -53,9 +53,7 @@
               <input type="password" class="form-control" name="passwordTwo" placeholder="Confirm Password" required>
             </div>
           </div>
-          <div class="text-center">
-            <button class="btn btn-default" type="submit">Submit</button>
-          </div>
+          <button class="btn btn-md btn-default btn-block" type="submit">Login</button>
         </form>
       </div>
 
