--- a/public/dashboard_admin/adminUsers/adminUsers.ejs
+++ b/public/dashboard_admin/adminUsers/adminUsers.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <% include ../../includes/head %>
+  <% include ../includes/dashboardHead %>
   <body>
-    <div class="container">
+    <div>
 
     <br />      
     <br />
@@ -43,13 +43,13 @@
         <% } %>
       <% } %>
 
-      <div id="register">
+      <div id="form">
         <form class="container" action="/adminUsers/create" method="post">
           <h2 class="form-signin-heading">
             Create Administrator Account
           </h2>
           <div class="row">              
-            <div class="col-md-12 mb-2">
+            <div class="col-md-12 mb-2  mt-2">
               <label for="email" class="sr-only">Email</label>              
               <input type="text" class="form-control" name="email" placeholder="Email" required>
             </div>
@@ -88,15 +88,20 @@
         </form>
       </div>
 
-      <div class="form-group form-signin">
-        <form action="/adminUsers/delete" method="post">
-          <h2 class="form-signin-heading">Delete Administrator Account</h2>
-          <label for="email" class="sr-only">Email</label>
-          <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required>
+      <div id="form">
+        <form class="container" action="/adminUsers/delete" method="post">
+          <h2 class="form-signin-heading">
+            Delete Administrator Account
+          </h2>
+          <div class="row">              
+            <div class="col-md-12 mb-2  mt-2">
+              <label for="email" class="sr-only">Email</label>              
+              <input type="email" class="form-control" name="email" placeholder="Email" required>
+            </div>
+          </div>          
           <button class="btn btn-md btn-default btn-block" type="submit">Submit</button>
         </form>
       </div>
-
     </div>
     
     <% include ../../includes/scripts %>
