--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -18,13 +18,23 @@
       <% } %>
       <% } %>
       
-      <div class="form-group form-signin">
-        <form action="/login" method="post">
-          <h2 class="form-signin-heading">Login</h2>
-          <label for="email" class="sr-only">Email</label>
-          <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required autofocus>
-          <label for="password" class="sr-only">Password</label>
-          <input type="password" name="password" class="form-control form-control-warning" placeholder="Password" required>
+      <div id='register'>
+        <form class="container" action="/login" method="post">
+          <h2 class="form-signin-heading">
+            Login
+          </h2>
+          <div class="row">              
+            <div class="col-md-12 mb-2  mt-3">
+              <label for="email" class="sr-only">Email</label>              
+              <input type="text" class="form-control form-control-warning" name="email" placeholder="Email" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mb-2">
+              <label for="password" class="sr-only">Password</label>         
+              <input type="password" class="form-control form-control-warning" id="password" name="password" placeholder="Password" required>
+            </div>
+          </div>
           <div class="checkbox">
             <label>
               <input type="checkbox" value="remember-me"> Remember me
