--- a/public/dashboard_admin/props/props.ejs
+++ b/public/dashboard_admin/props/props.ejs
@@ -1,13 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../includes/dashboardHead %>
-  <body>
+  <body class="container-fluid">
     <div>
 
-    <br />      
-    <br />
-    <a href="/admin">Back</a>
-    <br />
+      <% include ../includes/dashboardNav %>
+
+      <div class="row">
+        <div class="col-2">
+          <ul class="nav nav-fill flex-column nav-pills">
+            <li class="nav-item">
+              <a class="nav-link side-link active" id="add-property-tab" data-toggle="pill" href="#add-property">Add Property</a>
+            </li>
+            <div class="dropdown-divider"></div>
+            <li class="nav-item">
+              <a class="nav-link side-link" id="delete-property-tab" data-toggle="pill" href="#delete-property">Delete Property</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-9">
+          <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane show active fade" id="add-property">
+
+              <div id="form-group">
+                <form class="container" action="/props/add" method="post">
+                  <div class="row">
+                    <div class="col-md-9">
+                      <div class="row">              
+                        <div class="col-md-7 mb-1">
+                          <input type="text" class="form-control" name="street" placeholder="Street" required>
+                        </div>
+                        <div class="col-md-5 mb-1">
+                          <input type="text" class="form-control" name="city" placeholder="City">
+                        </div>
+                      </div>
+                      <div class="row">              
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="zip" placeholder="Zip Code">
+                        </div>
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="state" placeholder="State">
+                        </div>
+                      </div>
+                      <div class="row">              
+                        <div class="col-md-4 mb-1">
+                          <input type="text" class="form-control" name="type" placeholder="Type">
+                        </div>          
+                        <div class="col-md-4 mb-1">
+                          <input type="text" class="form-control" name="sqft" placeholder="Square Foot">
+                        </div>          
+                        <div class="col-md-4 mb-1">
+                          <input type="text" class="form-control" name="stories" placeholder="Stories">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="year" placeholder="Year Built">
+                        </div>      
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="mainImage" placeholder="Main Image Name">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="occupant1" placeholder="Occupant">
+                        </div>      
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="occupant2" placeholder="Occupant">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="occupant3" placeholder="Occupant">
+                        </div>      
+                        <div class="col-md-6 mb-1">
+                          <input type="text" class="form-control" name="occupant4" placeholder="Occupant">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 mb-2">
+                      <div class="row">              
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" name="washer" value="true"> Washer
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" name="dryer" value="true"> Dryer
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">              
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" name="garage" value="true"> Garage
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" name="basement" value="true"> Basement
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">              
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" name="fence" value="true"> Fence
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" name="occupied" value="true"> Occupied
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="text-center">
+                    <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
+                  </div>
+                </form>
+              </div>
+            
+            </div>
+            <div class="tab-pane fade" id="delete-property">
+
+              <div id="form">
+                <form class="container" action="/props/delete" method="post">
+                  <div class="row">              
+                    <div class="col-md-12 mb-2  mt-3">
+                      <label for="id" class="sr-only">ID</label>              
+                      <input type="text" class="form-control" name="id" placeholder="ID" required>
+                    </div>
+                  </div>          
+                  <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
+                </form>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
 
       <% if (!(typeof createSuccess == 'undefined')) { %>
         <% if (!createSuccess) { %>
@@ -35,133 +181,6 @@
         <% } %>
       <% } %>
 
-    <div id="dashboardProps">
-        <form class="container" action="/props/add" method="post">
-          <h2 class="form-signin-heading">
-            Add Property
-          </h2>
-          <div class="row">              
-            <div class="col-md-8 mb-2 mt-5">
-              <div class="row">              
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="street" class="col-sm-3 col-form-label">Street:</label>              
-                  <input type="text" class="form-control" name="street" placeholder="123 N Main Street" required>
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="city" class="col-sm-3 col-form-label">City:</label>              
-                  <input type="text" class="form-control" name="city" placeholder="City">
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="zip" class="col-sm-3 col-form-label">Zip:</label>              
-                  <input type="text" class="form-control" name="zip" placeholder="61880">
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="state" class="col-sm-3 col-form-label">State:</label>              
-                  <input type="text" class="form-control" name="state" placeholder="Illinois">
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="type" class="col-sm-3 col-form-label">Type:</label>              
-                  <input type="text" class="form-control" name="type" placeholder="Ranch">
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="sqft" class="col-sm-3 col-form-label">Sq ft:</label>              
-                  <input type="text" class="form-control" name="sqft" placeholder="1658">
-                </div>
-              </div>
-              <div class="row">            
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="stories" class="col-sm-3 col-form-label">Stories:</label>              
-                  <input type="text" class="form-control" name="stories" placeholder="2">
-                </div>
-              </div>
-              <div class="row">            
-                <div class="col-md-12 mb-2 form-inline">
-                  <label for="mainImage" class="col-sm-3 col-form-label">Main Image:</label>              
-                  <input type="text" class="form-control" name="mainImage" placeholder="Image Name">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-2 mt-5">
-              <div class="row">              
-                <div class="col-md-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="washer" value="true"> Washer
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="dryer" value="true"> Dryer
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="garage" value="true"> Garage
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="basement" value="true"> Basement
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="row">              
-                <div class="col-md-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="fence" value="true"> Fence
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="occupied" value="true"> Occupied
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="text-center">
-            <button class="btn btn-default" type="submit">Submit</button>
-          </div>
-        </form>
-      </div>
-
-      <div id="form">
-        <form class="container" action="/props/delete" method="post">
-          <h2 class="form-signin-heading">
-            Delete Property
-          </h2>
-          <div class="row">              
-            <div class="col-md-12 mb-2  mt-3">
-              <label for="id" class="sr-only">ID</label>              
-              <input type="text" class="form-control" name="id" placeholder="ID" required>
-            </div>
-          </div>          
-          <button class="btn btn-md btn-default btn-block" type="submit">Submit</button>
-        </form>
-      </div>
     </div>
     
     <% include ../../includes/scripts %>
